<resources>
    <string name="app_name">E-Reporta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_address">Email Address</string>
    <string name="e_reporta_gmail_com">e-reporta@gmail.com</string>
    <string name="password">Password</string>
    <string name="password_entry">*********</string>
    <string name="continue_lbl">Continue</string>
    <string name="or_register_with">Or register with</string>
    <string name="logo_google">logo_google</string>
    <string name="logo_facebook">logo_facebook</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="enter_your_personal_details">Enter your personal details</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="contact_address">Contact Address</string>
    <string name="sign_up">Sign Up</string>
</resources>